Store user role + enabled state in the database